<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
  <ListView android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />
  <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
    <Button android:text="@string/editor_cancel_button_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickCancel" />
    <Button android:id="@+id/editor_delete_button"
            android:text="@string/editor_delete_button_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickDelete" />
    <Button android:text="@string/editor_done_button_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickDone" />
  </LinearLayout>
</LinearLayout>
